--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-query": "^3.39.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.1",
     "recharts": "^2.1.10",
     "web-vitals": "^2.1.4"
   },
